--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
     <div class="header">
         <div class="navbar">
             <div class="logo">Header Logo</div>
@@ -27,6 +28,7 @@
             </div>
         </div>
     </div>
+</div>
     
 </body>
 </html>
