Work done on the boxes section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
         </div>
     </div>
 </div>
-    
+    <section class="information">
+        <h2>Some random information.</h2>
+        <div class="boxes">
+            <div class="box"><p class="subtext">this is some subtext under an illustration or image</p></div>
+            <div class="box">2</div>
+            <div class="box">3</div>
+            <div class="box">4</div>
+        </div>
+    </section>
 </body>
 </html>
