--- a/index.html
+++ b/index.html
@@ -8,34 +8,46 @@
 </head>
 <body>
     <div class="container">
-    <div class="header">
-        <div class="navbar">
-            <div class="logo">Header Logo</div>
-            <div class="nav-links">
-                <a href="#">header link one</a>
-                <a href="#">header link two</a>
-                <a href="#">header link three</a>
+        <div class="header">
+            <div class="navbar">
+                <div class="logo">Header Logo</div>
+                <div class="nav-links">
+                    <a href="#">header link one</a>
+                    <a href="#">header link two</a>
+                    <a href="#">header link three</a>
+                </div>
             </div>
-        </div>
-        <div class="hero">
-            <div class="sign-up">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-            <button>Sign Up</button>
-        </div>
-            <div class="image-section">
-                <div class="placeholder">this is a placeholder for an image</div>
+            <div class="hero">
+                <div class="sign-up">
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                    <button>Sign Up</button>
+                </div>
+                <div class="image-section">
+                    <div class="placeholder">this is a placeholder for an image</div>
+                </div>
             </div>
         </div>
     </div>
-</div>
     <section class="information">
         <h2>Some random information.</h2>
         <div class="boxes">
-            <div class="box"><p class="subtext">this is some subtext under an illustration or image</p></div>
-            <div class="box">2</div>
-            <div class="box">3</div>
-            <div class="box">4</div>
+            <div class="box-group">
+                <div class="box"></div>
+                <p class="subtext">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="box-group">
+                <div class="box"></div>
+                <p class="subtext">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="box-group">
+                <div class="box"></div>
+                <p class="subtext">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="box-group">
+                <div class="box"></div>
+                <p class="subtext">this is some subtext under an illustration or image</p>
+            </div>
         </div>
     </section>
 </body>
