--- a/index.html
+++ b/index.html
@@ -48,7 +48,13 @@
                 <div class="box"></div>
                 <p class="subtext">this is some subtext under an illustration or image</p>
             </div>
-        </div>
+        </section>
+    <section>
+    <div class="section-quote">
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <h3>-Thor, God of Thunder</h3>
+    </div>
     </section>
+        </div>
 </body>
 </html>
