--- a/index.html
+++ b/index.html
@@ -55,6 +55,23 @@
         <h3>-Thor, God of Thunder</h3>
     </div>
     </section>
+
+    <section class="Cta">
+        <div class="cta-signup">
+            <div class="signup-text"> <!-- Added class for styling -->
+                <h4>Call to action! It's time!</h4>
+                <p class="signup-p">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="signup-button">
+                <button class="signup2">sign-up</button>
+            </div>
+        </div>
+    </section>
+    
+    <section class="footer">
+        <p class="footer-text">Copyright © The Odin Project InNoxIn 2024</p>
+    </section>
+    
         </div>
 </body>
 </html>
